--- a/views/viewDoctors.ejs
+++ b/views/viewDoctors.ejs
@@ -205,6 +205,11 @@
                   <a class="edit" href="/admin/edit-doctor/<%= doctor._id %>">Edit</a>
                   <form action="/admin/delete-doctor/<%= doctor._id %>" method="POST" style="display: inline;">
                     <button type="submit">Delete</button>
+
+                    <form action="/admin/change-to-patient/<%= doctor._id %>" method="POST" style="display: inline;">
+                      <button type="submit">Change to Patient</button>
+                    </form>
+                    
                   </form>
 
                 </div>
