--- a/views/doctorProfile.ejs
+++ b/views/doctorProfile.ejs
@@ -44,9 +44,10 @@
     <p><strong>Consultation:</strong> <%= doctor.consultation %></p>
     <p><strong>Rating:</strong> <%= doctor.rating %></p>
     <p><strong>Consultations Completed:</strong> <%= doctor.consultationsCompleted %></p>
-    
+    <p><strong>License Number:</strong> <%= doctor.licenseNumber %></p>
     <h3>Subscription Details</h3>
     <p><strong>Doctor Fee:</strong> <%= doctor.doctorFee %></p>
+    <p><strong>Doctor Fee Currency:</strong> <%= doctor.doctorFeeCurrency %></p>
     <p><strong>Subscription Type:</strong> <%= doctor.subscriptionType %></p>
     <p><strong>Subscription Verification:</strong> <%= doctor.subscriptionVerification %></p>
 
