--- a/views/editDoctorProfile.ejs
+++ b/views/editDoctorProfile.ejs
@@ -11,7 +11,7 @@
       z-index: 1;
       left: 0;
       top: 0;
-      width: 100%;z
+      width: 100%;
       height: 100%;
       overflow: auto;
       background-color: rgb(0,0,0);
@@ -319,6 +319,39 @@ function closeMapModal() {
   document.getElementById('mapModal').style.display = 'none';
 }
 
+function addFAQ() {
+    const container = document.getElementById('faq-container');
+    const index = container.children.length;
+
+    const div = document.createElement('div');
+    div.className = 'input-group';
+
+    const questionInput = document.createElement('input');
+    questionInput.type = 'text';
+    questionInput.name = `faqs[${index}][question]`;
+    questionInput.className = 'form-control';
+    questionInput.placeholder = 'FAQ Question';
+    div.appendChild(questionInput);
+
+    const answerInput = document.createElement('input');
+    answerInput.type = 'text';
+    answerInput.name = `faqs[${index}][answer]`;
+    answerInput.className = 'form-control';
+    answerInput.placeholder = 'FAQ Answer';
+    div.appendChild(answerInput);
+
+    const removeButton = document.createElement('button');
+    removeButton.type = 'button';
+    removeButton.className = 'btn btn-danger';
+    removeButton.textContent = 'Remove';
+    removeButton.addEventListener('click', function() {
+      div.remove();
+    });
+    div.appendChild(removeButton);
+
+    container.appendChild(div);
+  }
+
   </script>
   <script src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.GOOGLE_MAPS_API_KEY %>&libraries=places&callback=initMap" async defer></script></head>
 
@@ -544,15 +577,16 @@ function closeMapModal() {
     
     <div>
       <label>FAQs:</label>
-      <div id="faqs-container">
+      <div id="faq-container">
         <% doctor.faqs.forEach((faq, index) => { %>
           <div class="input-group">
-            <input type="text" name="faqs[<%= index %>]" value="<%= faq %>" class="form-control">
+            <input type="text" name="faqs[<%= index %>][question]" value="<%= faq.question %>" class="form-control" placeholder="FAQ Question">
+            <input type="text" name="faqs[<%= index %>][answer]" value="<%= faq.answer %>" class="form-control" placeholder="FAQ Answer">
             <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">Remove</button>
           </div>
         <% }) %>
       </div>
-      <button type="button" onclick="addInput('faqs')">Add FAQ</button>
+      <button type="button" onclick="addFAQ()">Add FAQ</button>
     </div>
 
     <div>
